# DirectStorage

./: .clang-format  .gitattributes  .gitignore  .gitmodules  NOTICES.txt  README.md  SUPPORT.md
Docs/: DEVGUIDANCE.md  DeveloperGuidance.md  diagrams.mmd
GDeflate/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
GDeflate/GDeflate/: CMakeLists.txt  GDeflate.h  GDeflateCompress.cpp  GDeflateDecompress.cpp  LICENSE  README.md  TileStream.h  Utils.h  config.h
GDeflate/GDeflateDemo/: CMakeLists.txt  CompressedFile.h  GpuDecompressor.cpp  GpuDecompressor.h  main.cpp  pch.h
GDeflate/GDeflateTest/: CMakeLists.txt  GDeflateTest.cpp
GDeflate/shaders/: GDeflate.hlsl  tilestream.hlsl
Samples/: NuGet.Config
Samples/BulkLoadDemo/: .gitignore  BulkLoadDemo-timeline.pdn  BulkLoadDemo.sln  README.md
Samples/BulkLoadDemo/BulkLoadDemo/: BulkLoadDemo.cpp  BulkLoadDemo.vcxproj  CpuPerformance.cpp  CpuPerformance.h  DStorageLoader.cpp  DStorageLoader.h  EventWait.h  MarcFile.cpp  MarcFile.h  MarcFileFormat.h  MarcFileManager.cpp  MarcFileManager.h  MemoryRegion.h  MultiHeap.h  packages.config
Samples/BulkLoadDemo/BulkLoadDemo/SampleModel/: README.md
Samples/BulkLoadDemo/Core/: Core.vcxproj  Display.cpp  FileUtility.h  GameCore.cpp  GameCore.h  GameInput.h  GpuTimeManager.cpp  GraphicsCore.cpp  Input.cpp  ParticleEffectManager.cpp  PostEffects.cpp  SamplerManager.h  TextureManager.h  packages.config  pch.h
Samples/BulkLoadDemo/Core/Shaders/: BicubicHorizontalUpsamplePS.hlsl  BicubicUpsamplePS.hlsl  BicubicVerticalUpsamplePS.hlsl  BilinearUpsamplePS.hlsl  CompositeHDRPS.hlsl  CompositeSDRPS.hlsl  LanczosHorizontalPS.hlsl  MagnifyPixelsPS.hlsl  ParticleTileCullingCS.hlsl  PresentHDRPS.hlsl  PresentSDRPS.hlsl  ScaleAndCompositeHDRPS.hlsl  ScaleAndCompositeSDRPS.hlsl  SharpeningUpsamplePS.hlsl
Samples/BulkLoadDemo/MiniArchive/: MiniArchive.vcxproj  convert.ps1  main.cpp  packages.config  pch.h
Samples/BulkLoadDemo/Model/: Animation.cpp  Model.cpp  Model.h  Model.vcxproj  ModelConvert.cpp  ModelLoader.cpp  ModelLoader.h  ParticleEffects.h  Renderer.cpp  SponzaRenderer.cpp  SponzaRenderer.h  TextureConvert.cpp  TextureConvert.h  packages.config
Samples/BulkLoadDemo/PropertySheets/: Build.props  Desktop.props
Samples/GpuDecompressionBenchmark/: .clang-format  CustomDecompression.h  GpuDecompressionBenchmark.cpp  GpuDecompressionBenchmark.sln  GpuDecompressionBenchmark.vcxproj  README.md  Visualization.xlsx  ZlibCodec.h  packages.config
Samples/HelloDirectStorage/: HelloDirectStorage.cpp  HelloDirectStorage.sln  HelloDirectStorage.vcxproj  README.md  packages.config
Samples/MiniEngine/Core/: Core.vcxproj  TextureManager.cpp  packages.config  pch.h
Samples/MiniEngine/DirectStorage/: README.md
Samples/MiniEngine/H3DArchive/: H3DArchive.h  H3DArchive.vcxproj  main.cpp  packages.config  pch.cpp  pch.h
Samples/MiniEngine/Model/: DStorageLoader.cpp  DStorageLoader.h  Model.vcxproj  Model.vcxproj.filters  ModelH3D.cpp  ModelH3D.h  ParticleEffects.cpp  SponzaRenderer.cpp  SponzaRenderer.h  packages.config
Samples/MiniEngine/ModelViewer/: ModelViewer.cpp  ModelViewer.sln  ModelViewer.vcxproj  ModelViewer.vcxproj.filters  packages.config
